--- a/app/globals.css
+++ b/app/globals.css
@@ -24,6 +24,9 @@ body {
   .btn_green {
     @apply border-green-50 bg-green-50 px-8 py-5 text-white;
   }
+  .btn_blue {
+    @apply border-blue-50 bg-blue-50 px-8 py-5 text-white;
+  }
   .btn_dark_green {
     @apply bg-green-90 px-8 py-4 text-white transition-all hover:bg-black;
   }
