--- a/app/globals.css
+++ b/app/globals.css
@@ -172,6 +172,11 @@ body {
   .doctor {
     @apply max-container relative flex w-full  flex-col justify-between gap-32 overflow-hidden bg-green-90 bg-pattern bg-cover bg-center bg-no-repeat px-6 py-12 text-white sm:flex-row sm:gap-12 sm:py-24 lg:px-20 xl:max-h-[900px] 2xl:rounded-5xl;
   }
+
+  /* hero cover */
+  .hero-cover {
+    @apply max-container relative flex w-full  flex-col justify-between gap-32 overflow-hidden bg-green-90 bg-pattern bg-cover bg-center bg-no-repeat px-6 py-12 text-white sm:flex-row sm:gap-12 sm:py-24 lg:px-20 xl:max-h-[400px] 2xl:rounded-5xl;
+  }
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
