--- a/app/globals.css
+++ b/app/globals.css
@@ -31,7 +31,7 @@ body {
     @apply bg-green-90 px-8 py-4 text-white transition-all hover:bg-black;
   }
   .btn_dark_green_outline {
-    @apply border-gray-20 bg-green-90 px-8 py-5 text-white;
+    @apply border-gray-20 px-8 py-5 text-white;
   }
 
   .max-container {
@@ -169,6 +169,10 @@ body {
   /* Intro */
   .get-app {
     @apply max-container relative flex w-full  flex-col justify-between gap-32 overflow-hidden bg-green-90 bg-pattern bg-cover bg-center bg-no-repeat px-6 py-12 text-white sm:flex-row sm:gap-12 sm:py-24 lg:px-20 xl:max-h-[698px] 2xl:rounded-5xl;
+  }
+
+  .pattern-blue {
+    @apply max-container relative flex w-full  flex-col justify-between gap-32 overflow-hidden bg-green-90 bg-pattern-blue bg-cover bg-center bg-no-repeat px-6 py-12 text-white sm:flex-row sm:gap-12 sm:py-24 lg:px-20 xl:max-h-[698px] 2xl:rounded-5xl;
   }
 
   /* Doctor */
