--- a/app/globals.css
+++ b/app/globals.css
@@ -150,10 +150,10 @@ body {
 
   /* Hero */
   .hero-bg {
-    @apply absolute right-0 top-0 h-screen w-screen bg-pattern-2 bg-cover bg-center xl:-top-60;
+    @apply absolute h-screen md:w-screen bg-pattern-2 bg-cover bg-center right-0 -top-60;
   }
   .hero-map {
-    @apply absolute right-0 top-0 h-screen w-screen bg-pattern-2 bg-cover bg-center md:-right-28 xl:-top-60;
+    @apply absolute h-screen w-screen bg-pattern-2 bg-cover bg-center -right-28 -top-60;
   }
 
   /* Camp */
